--- a/Stopwatch/PropertyInspector/Stopwatch/Index.html
+++ b/Stopwatch/PropertyInspector/Stopwatch/Index.html
@@ -21,6 +21,11 @@
             <input class="sdpi-item-value sdProperty" placeholder="c:\temp\timer.txt" value="" id="fileName">
             <button class="sdpi-item-value max20 minmargin" onclick="setSettings()">Save</button>
         </div>
+        <div class="sdpi-item" id="dvSpineFileName">
+            <div class="sdpi-item-label">Spine File Name</div>
+            <input class="sdpi-item-value sdProperty" placeholder="c:\temp\migaspine.txt" value="" id="spineFileName">
+            <button class="sdpi-item-value max20 minmargin" onclick="setSettings()">Save</button>
+        </div>
         <div type="checkbox" class="sdpi-item" id="dvClearFileOnReset">
             <div class="sdpi-item-label">Clear on Reset</div>
             <div class="sdpi-item-value">
